Bug 322303 - Kmailcvt fails to import Outlook Express mailbox with error "failed to read temporary file"
Summary: Kmailcvt fails to import Outlook Express mailbox with error "failed to read t...
Status: RESOLVED FIXED
Alias: None
Product: kmailcvt
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.10.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-13 10:02 UTC by Mark Wagner
Modified: 2013-07-13 17:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments
An Outlook Express mailbox containing 5 messages (13.79 KB, application/octet-stream)
2013-07-13 10:02 UTC, Mark Wagner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Wagner 2013-07-13 10:02:35 UTC
Created attachment 81086 [details]
An Outlook Express mailbox containing 5 messages

When importing an Outlook Express mailbox, kmailcvt goes into an apparently infinite loop of printing the message "Error: failed to read temporary file at /tmp/kde-mark/kmailcvtXXYYYY.tmp", where XX is two random letters, and YYYY is a four-digit number that remains constant for the entire import attempt.

The files named exist but are empty.

This was seen with Gentoo/Kmail 4.10.4, Kubuntu 13.04/Kmail 4.10.2, and Kubuntu 13.04/Kmail 4.10.4.
Comment 1 Laurent Montel 2013-07-13 16:47:34 UTC
I confirm it.
Will look at it soon.
Regards
Comment 2 Laurent Montel 2013-07-13 17:20:49 UTC
Git commit 624799eb403fde79ce5c725d2c6afa244dcf52ac by Montel Laurent.
Committed on 13/07/2013 at 17:20.
Pushed by mlaurent into branch 'KDE/4.11'.

Fix Bug 322303 - Kmailcvt fails to import Outlook Express mailbox with error "failed to read temporary file"

FIXED-IN: 4.11

M  +8    -7    mailimporter/filter_oe.cpp

http://commits.kde.org/kdepim/624799eb403fde79ce5c725d2c6afa244dcf52ac
Comment 3 Laurent Montel 2013-07-13 17:22:13 UTC
Ok works fine now.
Never worked before :(

I never tested oe import was an old code.
So if you find other bug please report them (+ testcase was very useful)

Thanks