Fix Bug 322303 - Kmailcvt fails to import Outlook Express mailbox with error "failed to read temporary file"

FIXED-IN: 4.11
BUG: 322303